add doc--> paths for artist and album
